--- a/src/config/config.json
+++ b/src/config/config.json
@@ -942,8 +942,8 @@
       }
     },
     {
-      "slug": "Jingle",
-      "name": "jingle",
+      "slug": "jingle",
+      "name": "Jingle",
       "title": "The Snowmancer",
       "description": "A playful spirit of the cold, bringing holiday cheer wherever he wanders.",
       "type": "ocean",
